--- a/TODO
+++ b/TODO
@@ -20,3 +20,7 @@ De fapt o sa avem o aplicatie de adminstrare
 
 
 https://www.digitalocean.com/community/tutorials/how-to-serve-flask-applications-with-gunicorn-and-nginx-on-ubuntu-18-04
+
+
+
+Raspuns prin sms cu kilometrajul actual
